test/Fail/PatternSynonymAmbiguousParse.err
PatternSynonymAmbiguousParse.agda:10.1-45: error: [AmbiguousParseForLHS]
Don't know how to parse if x then if x then x else x. Could mean
any one of:
  if x then (if x then x else x)
  if x then (if x then x) else x
Operators used in the grammar:
  if_then      (prefix operator, level 0) [if_then_ (PatternSynonymAmbiguousParse.agda:7.3-11)]     
  if_then_else (prefix operator, level 0) [if_then_else_ (PatternSynonymAmbiguousParse.agda:6.3-16)]
when scope checking the declaration
  pattern bad x = if x then if x then x else x
